Rename :  - ElementMapping -> MappingElement  - AttributeMapping -> MappingAttribute

--- a/plugins/org.eclipse.reqcycle.repository.data/plugin.properties
+++ b/plugins/org.eclipse.reqcycle.repository.data/plugin.properties
@@ -52,3 +52,12 @@ _UI_AbstractElement_id_feature = Id
 _UI_AbstractElement_name_feature = Name
 _UI_AbstractElement_uri_feature = Uri
 _UI_AbstractElement_scopes_feature = Scopes
+_UI_MappingElement_type = Mapping Element
+_UI_MappingAttribute_type = Mapping Attribute
+_UI_MappingElement_description_feature = Description
+_UI_MappingElement_targetElement_feature = Target Element
+_UI_MappingElement_attributes_feature = Attributes
+_UI_MappingElement_sourceQualifier_feature = Source Qualifier
+_UI_MappingAttribute_targetAttribute_feature = Target Attribute
+_UI_MappingAttribute_description_feature = Description
+_UI_MappingAttribute_sourceId_feature = Source Id
