- Move Scope : from RequirementSourceData -> to ScopesConf.ecore

--- a/plugins/org.eclipse.reqcycle.repository.data/plugin.properties
+++ b/plugins/org.eclipse.reqcycle.repository.data/plugin.properties
@@ -61,3 +61,5 @@ _UI_MappingElement_sourceQualifier_feature = Source Qualifier
 _UI_MappingAttribute_targetAttribute_feature = Target Attribute
 _UI_MappingAttribute_description_feature = Description
 _UI_MappingAttribute_sourceId_feature = Source Id
+_UI_Scopes_type = Scopes
+_UI_Scopes_scopes_feature = Scopes
