--- a/plugins/org.eclipse.reqcycle.repository.data/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.repository.data/plugin.xml
@@ -129,18 +129,18 @@
    </extension>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
-      <!-- @generated ScopesConf -->
+      <!-- @generated ScopeConf -->
       <package
-            uri="http://www.eclipse.org/ReqCycle/ScopesConf"
-            class="ScopesConf.ScopesConfPackage"
-            genModel="model/ScopesConf.genmodel"/>
+            uri="http://www.eclipse.org/ReqCycle/ScopeConf"
+            class="ScopeConf.ScopeConfPackage"
+            genModel="model/ScopeConf.genmodel"/>
    </extension>
 
    <extension point="org.eclipse.emf.edit.itemProviderAdapterFactories">
-      <!-- @generated ScopesConf -->
+      <!-- @generated ScopeConf -->
       <factory
-            uri="http://www.eclipse.org/ReqCycle/ScopesConf"
-            class="ScopesConf.provider.ScopesConfItemProviderAdapterFactory"
+            uri="http://www.eclipse.org/ReqCycle/ScopeConf"
+            class="ScopeConf.provider.ScopeConfItemProviderAdapterFactory"
             supportedTypes=
               "org.eclipse.emf.edit.provider.IEditingDomainItemProvider
                org.eclipse.emf.edit.provider.IStructuredItemContentProvider
