--- a/plugins/org.eclipse.reqcycle.repository.data/plugin.properties
+++ b/plugins/org.eclipse.reqcycle.repository.data/plugin.properties
@@ -63,3 +63,5 @@ _UI_MappingAttribute_description_feature = Description
 _UI_MappingAttribute_sourceId_feature = Source Id
 _UI_Scopes_type = Scopes
 _UI_Scopes_scopes_feature = Scopes
+_UI_RequirementSources_type = Requirement Sources
+_UI_RequirementSources_requirementSources_feature = Requirement Sources
