Use DataModelManager to retrieve Scopes Replace the containment link between Requirement sources and Abstract Elements by a reference one Add String attribute to Scope for Data Model URI Remove Requirements file when removing a requirement source change visibility of getConfigurationURI to public

--- a/plugins/org.eclipse.reqcycle.repository.data/plugin.properties
+++ b/plugins/org.eclipse.reqcycle.repository.data/plugin.properties
@@ -65,3 +65,5 @@ _UI_Scopes_type = Scopes
 _UI_Scopes_scopes_feature = Scopes
 _UI_RequirementSources_type = Requirement Sources
 _UI_RequirementSources_requirementSources_feature = Requirement Sources
+_UI_RequirementSource_DataModelURI_feature = Data Model URI
+_UI_RequirementSource_DefaultScope_feature = Default Scope
