Add container element, Requirements Container, in RequirementSourceData meta model

--- a/plugins/org.eclipse.reqcycle.repository.data/plugin.properties
+++ b/plugins/org.eclipse.reqcycle.repository.data/plugin.properties
@@ -67,3 +67,6 @@ _UI_RequirementSources_type = Requirement Sources
 _UI_RequirementSources_requirementSources_feature = Requirement Sources
 _UI_RequirementSource_DataModelURI_feature = Data Model URI
 _UI_RequirementSource_DefaultScope_feature = Default Scope
+_UI_RequirementSource_contents_feature = Contents
+_UI_RequirementsContainer_type = Requirements Container
+_UI_RequirementsContainer_requirements_feature = Requirements
