--- a/plugins/org.eclipse.reqcycle.repository.data/plugin.properties
+++ b/plugins/org.eclipse.reqcycle.repository.data/plugin.properties
@@ -70,3 +70,5 @@ _UI_RequirementSource_DefaultScope_feature = Default Scope
 _UI_RequirementSource_contents_feature = Contents
 _UI_RequirementsContainer_type = Requirements Container
 _UI_RequirementsContainer_requirements_feature = Requirements
+_UI_AbstractElement_text_feature = Text
+_UI_Scope_DataModelURI_feature = Data Model URI
