remove data model ui manager Use extension point in Reachable data preference page for injected attribute disable synchronize requirement source and traceability disable "open predicate editor" menu handler disable "load custom data model" menu handler disable "predicate editor for traceability relation" menu handler

--- a/plugins/org.eclipse.reqcycle.repository.data.ui/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.repository.data.ui/plugin.xml
@@ -34,6 +34,11 @@
     <handler
           class="org.eclipse.reqcycle.repository.data.ui.handlers.InitCustomDataHandler"
           commandId="org.eclipse.reqcycle.repository.data.ui.commands.initCustomData">
+       <enabledWhen>
+          <equals
+                value="false">
+          </equals>
+       </enabledWhen>
     </handler>
  </extension>
  <extension
