--- a/plugins/org.polarsys.reqcycle.predicates.persistance/plugin.xml
+++ b/plugins/org.polarsys.reqcycle.predicates.persistance/plugin.xml
@@ -21,7 +21,7 @@
             class="org.polarsys.reqcycle.predicates.persistance.util.PredicatesConfResourceFactoryImpl"/>
    </extension>
    <extension
-         point="org.eclipse.ziggurat.inject.binding">
+         point="org.polarsys.reqcycle.utils.inject.binding">
       <binding
             impl="org.polarsys.reqcycle.predicates.persistance.util.PredicatesConfManager"
             interface="org.polarsys.reqcycle.predicates.persistance.util.IPredicatesConfManager">
