--- a/plugins/org.polarsys.reqcycle.repository.data.ui/plugin.xml
+++ b/plugins/org.polarsys.reqcycle.repository.data.ui/plugin.xml
@@ -23,7 +23,7 @@
     </page>
  </extension>
  <!--extension RFa does not exist any more
-       point="org.eclipse.ziggurat.inject.binding">
+       point="org.polarsys.reqcycle.utils.inject.binding">
     <binding
           impl="org.polarsys.reqcycle.repository.data.ui.DataModelUiManager"
           interface="org.polarsys.reqcycle.repository.data.ui.IDataModelUiManager">
