--- a/plugins/org.polarsys.reqcycle.traceability.cache.emfbased/plugin.xml
+++ b/plugins/org.polarsys.reqcycle.traceability.cache.emfbased/plugin.xml
@@ -17,7 +17,7 @@
       </package>
    </extension>
     <extension
-         point="org.eclipse.ziggurat.inject.binding">
+         point="org.polarsys.reqcycle.utils.inject.binding">
       <binding
             impl="org.polarsys.reqcycle.traceability.cache.emfbased.CacheTraceabilityEngine"
             interface="org.polarsys.reqcycle.traceability.engine.ITraceabilityEngine"
