--- a/plugins/org.polarsys.reqcycle.traceability.storage/plugin.xml
+++ b/plugins/org.polarsys.reqcycle.traceability.storage/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension
-         point="org.eclipse.ziggurat.inject.binding">
+         point="org.polarsys.reqcycle.utils.inject.binding">
       <binding
             impl="org.polarsys.reqcycle.traceability.storage.impl.UndefinedTraceabilityStorage"
             interface="org.polarsys.reqcycle.traceability.storage.IStorageProvider">
