--- a/plugins/org.polarsys.reqcycle.traceability.ui/plugin.xml
+++ b/plugins/org.polarsys.reqcycle.traceability.ui/plugin.xml
@@ -23,7 +23,7 @@
       </view>-->
    </extension>
    <extension
-         point="org.eclipse.ziggurat.inject.binding">
+         point="org.polarsys.reqcycle.utils.inject.binding">
       <binding
             impl="org.polarsys.reqcycle.traceability.ui.services.impl.LocateService"
             interface="org.polarsys.reqcycle.traceability.ui.services.ILocateService">
