--- a/plugins/org.polarsys.reqcycle.types/plugin.xml
+++ b/plugins/org.polarsys.reqcycle.types/plugin.xml
@@ -3,7 +3,7 @@
 <plugin>
    <extension-point id="types" name="Types" schema="schema/types.exsd"/>
    <extension
-         point="org.eclipse.ziggurat.inject.binding">
+         point="org.polarsys.reqcycle.utils.inject.binding">
       <binding
             impl="org.polarsys.reqcycle.types.impl.TypesManager"
             interface="org.polarsys.reqcycle.types.ITypesManager"
