--- a/plugins/org.polarsys.reqcycle.utils.configuration/plugin.xml
+++ b/plugins/org.polarsys.reqcycle.utils.configuration/plugin.xml
@@ -9,7 +9,7 @@
       </parser>
    </extension>
    <extension
-         point="org.eclipse.ziggurat.inject.binding">
+         point="org.polarsys.reqcycle.utils.inject.binding">
       <binding
             impl="org.polarsys.reqcycle.utils.configuration.impl.ConfigurationManagerImpl"
             interface="org.polarsys.reqcycle.utils.configuration.IConfigurationManager"
