--- a/plugins/org.polarsys.reqcycle.utils.modelnature/plugin.xml
+++ b/plugins/org.polarsys.reqcycle.utils.modelnature/plugin.xml
@@ -3,7 +3,7 @@
 <plugin>
    <extension-point id="modelnature" name="modelnature" schema="schema/modelnature.exsd"/>
    <extension
-         point="org.eclipse.ziggurat.inject.binding">
+         point="org.polarsys.reqcycle.utils.inject.binding">
       <binding
             impl="org.polarsys.reqcycle.utils.modelnature.internal.DynamicNatureServiceImpl"
             interface="org.polarsys.reqcycle.utils.modelnature.ModelNatureService"
